Added report and code documentation.

--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -7,8 +7,9 @@
     "# Continuous Control\n",
     "\n",
     "---\n",
+    "This notebook implements the DDPG algorithm to solve a continuous control problem from a Unity ML-Agents environment. More precisely, the Reacher environment which requires to find the proper torque values to apply on a robotic arm to reach a target. \n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the second project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program.\n",
+    "This is the second project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program.\n",
     "\n",
     "### 1. Start the Environment\n",
     "\n",
@@ -164,11 +165,9 @@
    "source": [
     "### 3. Take Random Actions in the Environment\n",
     "\n",
-    "In the next code cell, you will learn how to use the Python API to control the agent and receive feedback from the environment.\n",
+    "The next code cell shows a \"dumb\" agent performing random actions. It gives an idea of how to use the Python API to control the agent and receive feedback from the environment.\n",
     "\n",
-    "Once this cell is executed, you will watch the agent's performance, if it selects an action at random with each time step.  A window should pop up that allows you to observe the agent, as it moves through the environment.  \n",
-    "\n",
-    "Of course, as part of the project, you'll have to change the code so that the agent is able to use its experience to gradually choose better actions when interacting with the environment!"
+    "Once this cell is executed, you will watch the agent's performance, if it selects an action at random with each time step.  A window should pop up that allows you to observe the agent, as it moves through the environment.  \n"
    ]
   },
   {
@@ -184,16 +183,9 @@
     "scores = np.zeros(num_agents) # initialize the score (for each agent)\n",
     "i = 0\n",
     "while True:\n",
-    "#     actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
-    "#     actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
-    "#     print(actions)\n",
-    "    #actions = agent.act(states)\n",
-    "    state = torch.from_numpy(states).float().to(\"cuda:0\")\n",
-    "\n",
-    "    action_t = agent.actor_target(state)\n",
-    "    actions = action_t.cpu().data.numpy()\n",
-    "#     actions2 = agent.critic_local(state, action_t).cpu().data.numpy()\n",
-    "    \n",
+    "    actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
+    "    actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
+    "    #print(actions)\n",
     "    env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
     "    next_states = env_info.vector_observations         # get next state (for each agent)\n",
     "    rewards = env_info.rewards                         # get reward (for each agent)\n",
@@ -204,8 +196,8 @@
     "#     print(actions[0:2])\n",
     "#     print(actions2[0:2])\n",
     "    i += 1\n",
-    "#     if i >= 4 :\n",
-    "#          break\n",
+    "    if i >= 4 :                                        # Exit after 4 iterations.\n",
+    "         break\n",
     "    if np.any(dones):                                  # exit loop if episode finished\n",
     "        break\n",
     "print('Total score (averaged over agents) this episode: {}'.format(np.mean(scores)))\n"
@@ -224,19 +216,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.close()"
+    "#Not required since we're going to train in the next code cell.\n",
+    "#env.close()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. It's Your Turn!\n",
+    "### 4. DDPG Implementation\n",
     "\n",
-    "Now it's your turn to train your own agent to solve the environment!  When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
-    "```python\n",
-    "env_info = env.reset(train_mode=True)[brain_name]\n",
-    "```"
+    "An new agent is created and the DDPG algorithm is set to run up to 1000 episodes with at most 1000 iterations each.\n"
    ]
   },
   {
@@ -256,41 +246,45 @@
     }
    ],
    "source": [
-    "scores = []\n",
+    "scores = []                                                   # A list to store the scores of all episodes\n",
     "\n",
+    "# The DDPG implementation\n",
     "def ddpg(n_episodes=1000, max_t=1000, print_every=100):\n",
-    "    scores_deque = deque(maxlen=print_every)\n",
+    "    scores_deque = deque(maxlen=print_every)                  # A queue to keep only the last 100 episodes' scores\n",
     "    for i_episode in range(1, n_episodes+1):\n",
     "        #print(\"ep:\", i_episode)\n",
     "        env_info = env.reset(train_mode=True)[brain_name]     # reset the environment    \n",
-    "        states = env_info.vector_observations                  # get the current state (for each agent)\n",
+    "\n",
+    "        #states is an array of the states for all the 20 agents.\n",
+    "        states = env_info.vector_observations                 # get the current state (for each agent)\n",
     "        score = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
     "        \n",
-    "        #states is an array of the states for all the 20 agents.\n",
-    "        agent.reset()\n",
-    "        for t in range(max_t):\n",
-    "            actions = agent.act(states)\n",
-    "            env_info = env.step(actions)[brain_name]           # send all actions to the environment\n",
-    "            next_states = env_info.vector_observations         # get next state (for each agent)\n",
-    "            rewards = env_info.rewards                         # get reward (for each agent)\n",
-    "            dones = env_info.local_done                        # see if episode finished\n",
-    "            score += env_info.rewards                          # update the score (for each agent)\n",
+    "        agent.reset()                                         # Reset the agent to start the episode\n",
+    "        for t in range(max_t):                                # A loop for the iterations\n",
+    "            actions = agent.act(states)                       # Get an action from the Actor's network, given the current state\n",
+    "            env_info = env.step(actions)[brain_name]          # send all actions to the environment\n",
+    "            next_states = env_info.vector_observations        # get next state (for each agent)\n",
+    "            rewards = env_info.rewards                        # get reward (for each agent)\n",
+    "            dones = env_info.local_done                       # see if episode finished\n",
+    "            score += env_info.rewards                         # update the score (for each agent)\n",
     "            \n",
+    "            # Perform an agent step. The step function expects one tuple (s,a,r,ns) at a time.\n",
     "            for i in range(20) :\n",
     "                agent.step(states[i], actions[i], rewards[i], next_states[i], dones[i], t)\n",
     "            \n",
-    "            states = next_states                               # roll over states to next time step\n",
+    "            states = next_states                              # Roll over states to next time step\n",
     "\n",
-    "            if np.any(dones):  # exit loop if episode finished\n",
+    "            if np.any(dones):                                 # exit loop if episode finished\n",
     "                break\n",
     "                \n",
-    "        score = score.mean()\n",
-    "        scores_deque.append(score)\n",
-    "        scores.append(score)\n",
+    "        score = score.mean()                                  # Get the mean score of the episode (over all agents)\n",
+    "        scores_deque.append(score)                            # Store the score in the queue\n",
+    "        scores.append(score)                                  # Store the score in the list (for plotting)\n",
     "        \n",
+    "        # Print out the mean score per episode\n",
     "        print('\\rEpisode {}\\tScore: {:.2f}'.format(i_episode, score), end=\"\")\n",
     "\n",
-    "        mean_sc = np.mean(scores_deque)\n",
+    "        mean_sc = np.mean(scores_deque)                       # Compute the mean score over the last 100 episodes\n",
     "        if i_episode % print_every == 0:\n",
     "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, mean_sc))\n",
     "            \n",
